--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,51 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
+    <nav>
+        <ul id="nav-links">
+
+        </ul>
+    </nav>
     {% block content %}
-    
+
     {% endblock content %}
-</body>
+    <script>
+        function removeTokens() {
+            localStorage.removeItem('access_token');
+            localStorage.removeItem('refresh_token');
+        }
+
+        function logout() {
+            const refreshToken = localStorage.getItem('refresh_token');
+            if (refreshToken) {
+                axios.post('{% url "logout" %}', { refresh: refreshToken })
+                    .then(response => {
+                        console.log(response.data.message);
+                        removeTokens();
+                        window.location.href = '{% url "login" %}';
+                    })
+                    .catch(error => {
+                        console.error('Logout error:', error);
+                    });
+            } else {
+                console.error('No refresh token available.');
+                window.location.href = '{% url "login" %}';
+            }   
+        }
+
+        document.addEventListener('DOMContentLoaded', function() {
+            const navLinks = document.getElementById('nav-links');
+            const accessToken = localStorage.getItem('access_token');
+            navLinks.innerHTML = '';
+            if (accessToken) {
+                const logoutLink = document.createElement('li')
+                logoutLink.innerHTML = '<a href="#" onclick="logout()">Logout</a>';
+                navLinks.appendChild(logoutLink);
+            } else {
+                const loginLink = document.createElement('li');
+                loginLink.innerHTML = '<a href="{% url "login" %}">Login</a>';
+                navLinks.appendChild(loginLink);
+            }
+        });
+    </script>
 </html>
