회원가입, 로그인, 로그아웃 기능 구현 2024.05.20 accounts/serializers.py에 SignupSerializers 생성 base.html에 비로그인 시 로그인 버튼 / 로그인 시 로그아웃 버튼 보이도록 생성 로그아웃 버튼 누를 시 refresh Token blacklist에 추가 login.html / signup.html에 기본적인 폼 생성 및 JS 로직 생성

--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -12,6 +12,9 @@
     
     <label for="email">이메일:</label>
     <input type="email" id="email" name="email" required>
+
+    <label for="nickname">닉네임:</label>
+    <input type="nickname" id="nickname" name="nickname" required>
     
     <label for="image">프로필 사진:</label>
     <input type="file" id="image" name="image">
@@ -28,6 +31,7 @@
             formData.append('username', document.getElementById('username').value);
             formData.append('password', document.getElementById('password').value);
             formData.append('email', document.getElementById('email').value);
+            formData.append('nickname', document.getElementById('nickname').value);
 
             const imageInput = document.getElementById('image');
             if (imageInput.files.length > 0) {
