--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    {% block head %} {% endblock head %}
+    
     {% load static %}
     <script src="{% static 'js/getcookie.js' %}"></script>
+    <script src="{% static 'js/playlist.js' %}"></script>
     <!-- Axios CDN -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
