--- a/templates/base.html
+++ b/templates/base.html
@@ -1,20 +1,29 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="{% static "css/base.css" %}">
     <!-- Axios CDN -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
     <nav>
-        <ul>
-            <li><a href="{% url 'signup' %}">Signup</a></li>
-            <li><a id="login-logout-link" href="{% url 'login' %}">Login</a></li>
-        </ul>
+            <a href="community" class="home">Home</a>
+            <div class="service">
+                <a href="community">Coach service</a>
+                <a href="community">Playlist</a>
+                <a href="community">Community</a>
+            </div>
+            <div class="accounts">
+                <a id="login-logout-link" href="{% url 'login' %}">Login</a>
+                <a href="{% url 'signup' %}">Signup</a>
+            </div>
     </nav>
-    <input type="hidden" id="csrf-token" value="{% csrf_token %}">
+    <input type="hidden" id="csrf-token" value="{{ csrf_token }}">
+    
     {% block content %}
 
     {% endblock content %}
