test->main으로 이름 다 바꿈, nav bar가운데 정렬, main page 완 성 240524 메인 로고는 사진으로 대체, 추후 필요할 경우 html, css에서 다시 제작 예정

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,6 +9,7 @@ body {
     background: linear-gradient(to right,#4861DA, #8F64C6, #D859AA);
     background-size: cover;
 }
+
 nav{
     font-family: 'S-CoreDream-3Light';
     font-size: 17px;
@@ -18,8 +19,18 @@ nav{
     justify-content: space-between;
 }
 
+.home{
+    width: 15%;
+}
+
 .service a{
     padding: 0px 10px;
+}
+
+.accounts{
+    display: flex;
+    justify-content: flex-end;
+    width: 15%;
 }
 
 .accounts a{
