--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     <nav>
-            <a href="community" class="home">Home</a>
+            <div class="home">
+                <a href="community">Home</a>
+            </div>
             <div class="service">
                 <a href="community">Coach service</a>
                 <a href="community">Playlist</a>
