--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -26,7 +26,7 @@
             localStorage.setItem('access', response.data.access);
             localStorage.setItem('refresh', response.data.refresh);
             alert('로그인 성공!');
-            window.location.href = '{% url "test" %}'
+            window.location.href = '{% url "main" %}'
         })
         .catch(error => {
             console.error('로그인 실패.', error);
