--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -9,10 +9,17 @@
     <div class="profile-image">
         <img id="profile-picture" alt="Profile Picture">
     </div>
-    <p><strong></strong> <span id="nickname"></span></p>
+    <p><span id="nickname"></span></p>
     <p class="hidden"><strong>Username:</strong> <span id="username"></span></p>
     <p class="hidden"><strong>Email:</strong> <span id="email"></span></p>
     <a href="/api/accounts/profile/{{user_id}}/edit/" id="edit-profile-button">프로필 수정</a>
+</div>
+
+<div class="menu">
+    <a href="#" class="active">내 게시글 목록</a>
+    <a href="#">찜한 게시글 목록</a>
+    <a href="#">찜한 노래 목록</a>
+    <a href="#">내가 받은 훈수</a>
 </div>
 
 <script>
@@ -45,7 +52,17 @@
         }
 
         loadProfile();
-    
+        
+        const menuLinks = document.querySelectorAll('.menu a');
+
+        menuLinks.forEach(link => {
+            link.addEventListener('click', function(event) {
+                event.preventDefault();
+                menuLinks.forEach(link => link.classList.remove('active'));
+                this.classList.add('active');
+            });
+        });
     });
+    
 </script>
 {% endblock content %}
