--- a/accounts/templates/accounts/profile_update.html
+++ b/accounts/templates/accounts/profile_update.html
@@ -13,10 +13,10 @@
         </label><br>
 
         <label for="username">이름</label>
-        <input type="text" id="username" name="username" autocomplete="username" required placeholder="원래 이름"><br>
+        <input type="text" id="username" name="username" autocomplete="username" required placeholder="새 아이디"><br>
         
         <label for="nickname">닉네임</label>
-        <input type="text" id="nickname" name="nickname" autocomplete="nickname" required placeholder="원래 닉네임"><br>
+        <input type="text" id="nickname" name="nickname" autocomplete="nickname" required placeholder="새 닉네임"><br>
         
         <label for="email">이메일</label>
         <input type="email" id="email" name="email" autocomplete="email" required placeholder="사용 중인 이메일"><br>
@@ -25,10 +25,10 @@
     </form>
 
     <form id="change-password-form">
-        <label for="current_password">현재 비밀번호:</label>
+        <label for="current_password">현재 비밀번호</label>
         <input type="password" id="current_password" name="current_password" required><br>
         
-        <label for="new_password">새 비밀번호:</label>
+        <label for="new_password">새 비밀번호</label>
         <input type="password" id="new_password" name="new_password" required><br>
         
         <button type="submit">비밀번호 변경</button>
