--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,12 @@
             </div>
             <div class="accounts">
                 <a id="login-logout-link" href="{% url 'login' %}">Login</a>
+                {% if user.is_authenticated %}
+                <a href="{% url 'profile' %}">Profile</a>
+                <a href="{% url 'logout' %}" id="logout-link">Logout</a>
+            {% else %}
                 <a href="{% url 'signup' %}">Signup</a>
+            {% endif %}
             </div>
     </nav>
     <input type="hidden" id="csrf-token" value="{{ csrf_token }}">
