playlist 경로 설정, playlist 편의성 추가 2024.05.24 1. playlist html 별도의 경로로 들어와야 하는걸 기본 url로 변경 2. 검색 버튼 제거 후 엔터 누르면 playlist 검색 기능으로 작동되게 변 3. playlist 듣기 버튼 제거 후 이미지 또는 타이틀 눌렀을 때 해당 페이지로 이동되게 변경

--- a/static/css/playlist.css
+++ b/static/css/playlist.css
@@ -1,39 +1,53 @@
 /* playlist.css */
 
-body {
-    background-color : #121212;
-    color : white;
+@font-face {
+    font-family: 'SCoreDream-500';
+    font-weight: 500;
+    font-style: normal;
+    src: url(https://cdn.jsdelivr.net/gh/webfontworld/SCoreDream/SCoreDream5.woff2) format('woff2'),
 }
 
-h1 {
-    text-align : center;
-    margin-top : 20px;
+.search-container {
+    max-width: 900px;
+    margin: 0 auto 20px auto; 
+    padding: 0 10px; 
 }
 
-.search {
-    text-align : center;
-    margin-bottom : 20px;
-}
-
-.search input {
-    width : 20%;
+.search-container input {
+    font-family: 'SCoreDream-500';
+    color: #fff;
+    width : 28%;
     height : 25px;
-    font-size : 18px;
+    font-size : 14px;
     padding : 5px;
     border-radius : 5px;
     border : 1px solid #ccc;
+    background-color:rgba(255, 255, 255, 0.075);
+}
+
+input::-webkit-input-placeholder {
+    color:#fff;
+}
+input::-moz-placeholder {
+    color:#fff;
+}
+input::-ms-input-placeholder {
+    color:#fff;
 }
 
 .playlist-container {
+    font-family: 'SCoreDream-500';
     display : flex;
     flex-wrap : wrap;
-    justify-content : center; 
+    justify-content : flex-start; 
     max-width : 900px;
     margin : 0 auto;
     gap : 20px;
 }
 
 .playlist-item {
+    font-family: 'SCoreDream-500';
+    color : #fff;
     border-radius : 10px;
     overflow : hidden;
     width : calc(25% - 20px);
@@ -52,9 +66,4 @@ h1 {
 .playlist-info h2 {
     font-size : 18px;
     margin : 10px 0 5px;
-}
-
-.playlist-info p {
-    font-size : 14px;
-    color : #b3b3b3;
 }
