--- a/playlist/templates/playlist/playlist.html
+++ b/playlist/templates/playlist/playlist.html
@@ -6,15 +6,12 @@
 {% endblock head %}
 
 {% block content %}
-<h1>플레이리스트</h1>
 
-<div class="search">
+<div class="search-container">
     <input type="text" id="search-input" placeholder="어떤 플리를 원하나요?">
-    <button id="search-btn">검색</button>
 </div>
 
-<div class="playlist-container" id="playlist-container">
-</div>
+<div class="playlist-container" id="playlist-container"></div>
 
 <!-- JavaScript 파일 로드 -->
 <script src="{% static 'js/playlist.js' %}"></script>
