홈으로 연결 ,플레이 리스트연결 24.05.24

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -62,7 +62,11 @@
                 this.classList.add('active');
             });
         });
+        document.getElementById('home-button').addEventListener('click', function() {
+            window.location.href = '/api/accounts/api/main/';  // 메인 페이지로 이동
+        });
     });
+    
     
 </script>
 {% endblock content %}
