--- a/templates/base.html
+++ b/templates/base.html
@@ -5,69 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- Axios CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="{% static "css/base.css" %}">
 
     {% block head %} {% endblock head %}
-    
-    {% load static %}
+
     <script src="{% static 'js/playlist.js' %}"></script>
+    <script src="{% static 'js/base.js' %}"></script>
 
-    <!-- Axios CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const accessToken = localStorage.getItem('access');
-            const refreshToken = localStorage.getItem('refresh');
-            
-            if (!accessToken || !refreshToken) {
-                // 토큰이 없으면 로그인 페이지로 리디렉션
-                if (window.location.pathname !== '{% url "login" %}') {
-                    window.location.href = '{% url "login" %}';
-                }
-                return;
-            }
-            
-            axios.defaults.baseURL = 'http://127.0.0.1:8000/';
-            axios.defaults.headers.common['Authorization'] = `Bearer ${accessToken}`;
-
-            const refreshTokenFunction = async () => {
-                try {
-                    const response = await axios.post('api/accounts/api/token/refresh/', {
-                        refresh: refreshToken
-                    });
-                    const newAccessToken = response.data.access;
-                    axios.defaults.headers.common['Authorization'] = `Bearer ${newAccessToken}`;
-                    localStorage.setItem('access', newAccessToken);
-                    return newAccessToken;
-                } catch (error) {
-                    console.error('토큰을 새로고침할 수 없습니다.', error);
-                    localStorage.removeItem('access');
-                    localStorage.removeItem('refresh');
-                    if (window.location.pathname !== '{% url "login" %}') {
-                        window.location.href = '{% url "login" %}';
-                    }
-                }
-            };
-
-            axios.interceptors.response.use(
-                response => response,
-                async error => {
-                    const originalRequest = error.config;
-                    if (error.response.status === 401 && !originalRequest._retry) {
-                        originalRequest._retry = true;
-                        const newAccessToken = await refreshTokenFunction();
-                        axios.defaults.headers.common['Authorization'] = `Bearer ${newAccessToken}`;
-                        originalRequest.headers['Authorization'] = `Bearer ${newAccessToken}`;
-                        return axios(originalRequest);
-                    }
-                    return Promise.reject(error);
-                }
-            );
-
-            // 토큰이 만료되지 않았는지 확인
-            refreshTokenFunction();
-        });
-    </script>
 </head>
 <body>
     <nav>
@@ -95,50 +41,5 @@
         
         {% endblock content %}
     </div>
-    <script>
-        // CSRF 토큰을 가져오는 전역 함수
-        function getCsrfToken() {
-            return document.getElementById('csrf-token').value;
-        }
-
-        function checkLoginStatus() {
-            const accessToken = localStorage.getItem('access');
-            const loginLogoutLink = document.getElementById('login-logout-link');
-            if (accessToken) {
-                loginLogoutLink.textContent = 'Logout';
-                loginLogoutLink.addEventListener('click', function(e) {
-                    e.preventDefault();
-                    logout();
-                });
-            } else {
-                loginLogoutLink.textContent = 'Login';
-                loginLogoutLink.href = '{% url "login" %}';
-            }
-        }
-        
-        function logout() {
-            const refreshToken = localStorage.getItem('refresh');
-            const csrfToken = getCsrfToken();
-            axios.post('{% url "logout" %}', { refresh: refreshToken }, {
-                headers: {
-                    'X-CSRFToken': csrfToken
-                }
-            })
-            .then(response => {
-                localStorage.removeItem('access');
-                localStorage.removeItem('refresh');
-                alert('로그아웃 성공!');
-                window.location.href = '{% url "login" %}';
-            })
-            .catch(error => {
-                console.error('로그아웃 실패.', error);
-            });
-        }
-
-        document.addEventListener('DOMContentLoaded', function() {
-            checkLoginStatus();
-        });
-
-    </script>
 </body>
 </html>
