post create html css 완료 240527 1. 다른 css input값 글자 색이랑 폰트 다 수정 2. signup css, html test->signup 글자 수정

--- a/accounts/static/accounts/css/login.css
+++ b/accounts/static/accounts/css/login.css
@@ -83,6 +83,8 @@
 
 /* input칸 조절 */
 input { 
+    font-family: 'SCoreDream-400';
+    color: #fff;
     border:1px solid #fff;
     background-color:transparent;
     border-radius: 5px;
