--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -5,16 +5,16 @@
 <div class="signup-form">
     <p>Signup</p>
     <form id="signup-form" method="post">
-        <div class="test">
+        <div class="signup">
             <span class="signup-text">아이디</span><input type="text" id="username" placeholder="아이디를 입력해주세요" required><br>
         </div>
-        <div class="test">
+        <div class="signup">
             <span class="signup-text">닉네임</span><input type="text" id="nickname" placeholder="닉네임을 입력해주세요" required><br>
         </div>
-        <div class="test">
+        <div class="signup">
             <span class="signup-text">비밀번호</span><input type="password" id="password" placeholder="비밀번호를 입력해주세요" required><br>
         </div>
-        <div class="test">
+        <div class="signup">
             <span class="signup-text">이메일</span><input type="email" id="email" placeholder="이메일을 입력해주세요" required><br>
         </div>
         <div class="signup-image-line">
