--- a/posts/static/posts/css/detail.css
+++ b/posts/static/posts/css/detail.css
@@ -128,6 +128,8 @@ p{
 
 /* 댓글 칸 스타일 */
 textarea { 
+    font-family: 'SCoreDream-400';
+    color: #fff;
     border:1px solid #fff;
     background-color:transparent;
     border-radius: 5px;
