--- a/posts/static/posts/css/list.css
+++ b/posts/static/posts/css/list.css
@@ -57,6 +57,8 @@ p{
 .title-search p{
     font-family: 'SCoreDream-600';
     font-size: 50px;
+    font-family: 'SCoreDream-400';
+    color: #fff;
 }
 
 /* 검색창 스타일 */
