--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -35,6 +35,7 @@
         .then(response => {
             localStorage.setItem('access', response.data.access);
             localStorage.setItem('refresh', response.data.refresh);
+            localStorage.setItem('user_id', response.data.user_id);
             alert('로그인 성공!');
             window.location.href = '{% url "main" %}'
         })
