--- a/accounts/templates/accounts/profile_update.html
+++ b/accounts/templates/accounts/profile_update.html
@@ -9,17 +9,20 @@
     <form id="update-profile-form">
         <label for="image" class="image-label">
             <input type="file" id="image" name="image">
-            <img id="image-preview" alt="Preview Image">
+            <img id="image-preview" alt="Preview Image" style="display:none;">
         </label><br>
 
+        <!-- 기존 아이디를 입력 필드에 미리 채워 넣기 -->
         <label for="username">이름</label>
-        <input type="text" id="username" name="username" autocomplete="username" required placeholder="새 아이디"><br>
+        <input type="text" id="username" name="username" autocomplete="username" required placeholder="새 아이디" value="{{ user.username }}"><br>
         
+        <!-- 기존 닉네임을 입력 필드에 미리 채워 넣기 -->
         <label for="nickname">닉네임</label>
-        <input type="text" id="nickname" name="nickname" autocomplete="nickname" required placeholder="새 닉네임"><br>
+        <input type="text" id="nickname" name="nickname" autocomplete="nickname" required placeholder="새 닉네임" value="{{ user.nickname }}"><br>
         
+        <!-- 기존 이메일을 입력 필드에 미리 채워 넣기 -->
         <label for="email">이메일</label>
-        <input type="email" id="email" name="email" autocomplete="email" required placeholder="사용 중인 이메일"><br>
+        <input type="email" id="email" name="email" autocomplete="email" required placeholder="사용 중인 이메일" value="{{ user.email }}"><br>
         
         <button type="submit">프로필 수정</button>
     </form>
@@ -33,7 +36,6 @@
         
         <button type="submit">비밀번호 변경</button>
     </form>
-
 
     <script>
         document.getElementById('image').addEventListener('change', function(event) {
@@ -120,35 +122,7 @@
                 }
             });
         });
-
-        document.getElementById('delete-account-button').addEventListener('click', function() {
-            const userId = "{{ user_id }}"; // Django 템플릿에서 제공한 user_id
-            const csrfToken = "{{ csrf_token }}"; // Django 템플릿에서 제공한 CSRF 토큰
-            const accessToken = localStorage.getItem('access_token'); // 로컬 스토리지에서 Access Token 가져오기
-        
-            if (confirm('정말로 계정을 삭제하시겠나요? 다시 되돌릴 수 없습니다.')) {
-                axios.delete(`/api/accounts/api/profile/${userId}/delete/`, { // URL 수정
-                    headers: {
-                        'X-CSRFToken': csrfToken,
-                        'Authorization': `Bearer ${accessToken}`
-                    }
-                })
-                .then(function(response) {
-                    alert('탈출 성공하셨습니다!');
-                    window.location.href = '{% url "main" %}'
-                    console.log(response.data);
-                })
-                .catch(function(error) {
-                    console.error('There was an error!', error);
-                    if (error.response) {
-                        alert('탈퇴 실패: ' + (error.response.data.error || error.response.data));
-                    } else {
-                        alert('계정 탈출 실패');
-                    }
-                });
-            }
-        });
-        
     </script>
 </div>
+
 {% endblock content %}
