--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -38,9 +38,9 @@
         formData.append('password', document.getElementById('password').value);
         formData.append('nickname', document.getElementById('nickname').value);
         
-        const imageInput = document.getElementById('image');
+        const imageInput = document.getElementById('file-input');
             if (imageInput.files.length > 0) {
-                formData.append('image', imageInput.files[0]);
+                formData.append('file-input', imageInput.files[0]);
             }
 
         // CSRF 토큰을 가져옵니다.
