--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -6,10 +6,12 @@
     <h1 id="post-title"></h1>
     <div class="author-create">
         <p id="post-created"></p>
+        <p id="post-updated"></p>
         <p id="post-author"></p>
     </div>
     <a href="" id="update-link">수정하기 | 편집됨</a>
     <div class="post-img">
+        <img id="post-img">
     </div>
     <p id="post-content">
     </p>
@@ -17,7 +19,7 @@
         <p id="post-likes"></p>
         <p id="post-comment"></p>
     </div>
-    <form id="comment-form">
+    {% comment %} <form id="comment-form">
         <textarea id="comment-content" rows="4" cols="50" placeholder="댓글을 작성해주세요"></textarea><br>
         <button type="submit">완료</button>
     </form>
@@ -35,7 +37,7 @@
                 <button>삭제</button>
             </div>
         </div>
-    </div>
+    </div> {% endcomment %}
 </div>
 
 
@@ -61,29 +63,37 @@
             // 게시물 데이터를 서버에서 가져옴
             const response = await axios.get(`/api/posts/api/${postId}/`);
             const post = response.data;
+            console.log(post);
 
             // HTML 요소에 게시물 데이터를 채움
             document.getElementById('post-title').innerText = post.title;
             document.getElementById('post-content').innerText = post.content;
             document.getElementById('post-author').innerText = `작성자: ${post.author_nickname}`;
-            document.getElementById('post-likes').innerText = `좋아요: ${post.like}`;
+            document.getElementById('post-likes').innerText = `좋아요: `;
             document.getElementById('post-created').innerText = `작성일: ${post.created_at}`;
             document.getElementById('post-updated').innerText = `수정일: ${post.updated_at}`;
+            console.log("post.image: ", post.image);
+            if (post.image) {
+                console.log('Image URL:', post.image);  // 이미지 URL을 콘솔에 출력하여 확인
+                document.getElementById('post-img').src = post.image;
+            } else {
+                console.warn('No image available for this post.');
+            }
 
             // 댓글 목록을 처리함
-            const commentsList = document.getElementById('comments-list');
-            post.comments.forEach(comment => {
+            //const commentsList = document.getElementById('comments-list');
+            //post.comments.forEach(comment => {
                 // 각 댓글 항목을 생성함
-                const commentItem = document.createElement('li');
-                commentItem.innerHTML = `
-                    <p>${comment.content}</p>
-                    <p>작성자: ${comment.user} | 작성일: ${comment.created_at} | 수정일: ${comment.updated_at}</p>
-                    <button onclick="editComment(${comment.id})">수정</button>
-                    <button onclick="deleteComment(${comment.id})">삭제</button>
-                `;
+                //const commentItem = document.createElement('li');
+                //commentItem.innerHTML = `
+                    //<p>${comment.content}</p>
+                    //<p>작성자: ${comment.user} | 작성일: ${comment.created_at} | 수정일: ${comment.updated_at}</p>
+                    //<button onclick="editComment(${comment.id})">수정</button>
+                    //<button onclick="deleteComment(${comment.id})">삭제</button>
+                //`;
                 // 댓글 항목을 댓글 리스트에 추가함
-                commentsList.appendChild(commentItem);
-            });
+                //commentsList.appendChild(commentItem);
+            //});
         } catch (error) {
             // 데이터를 가져오는 중 오류가 발생하면 오류를 콘솔에 출력함
             console.error('게시물 데이터를 가져오는 중 오류 발생:', error);
