static 파일 구조 총 정리 2024.05.30 모든 app static 파일 구조 정리, 추후 추가 코드 수정 바람

--- a/coach/templates/coach/coach.html
+++ b/coach/templates/coach/coach.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head %}
-    <link rel="stylesheet" href="{% static 'css/coach.css' %}">
+    <link rel="stylesheet" href="{% static 'coach/css/coach.css' %}">
 {% endblock head %}
 
 {% block content %}
