--- a/coach/templates/coach/coach_result.html
+++ b/coach/templates/coach/coach_result.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head %}
-    <link rel="stylesheet" href="{% static 'css/coach_result.css' %}">
+    <link rel="stylesheet" href="{% static 'coach/css/coach_result.css' %}">
 {% endblock head %}
 
 {% block content %}
