--- a/playlist/templates/playlist/playlist.html
+++ b/playlist/templates/playlist/playlist.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head %}
-    <link rel="stylesheet" href="{% static 'css/playlist.css' %}">
+    <link rel="stylesheet" href="{% static 'playlist/css/playlist.css' %}">
 {% endblock head %}
 
 {% block content %}
@@ -14,5 +14,5 @@
 <div class="playlist-container" id="playlist-container"></div>
 
 <!-- JavaScript 파일 로드 -->
-<script src="{% static 'js/playlist.js' %}"></script>
+<script src="{% static 'playlist/js/playlist.js' %}"></script>
 {% endblock content %}
