로그아웃 시 nickname 삭제 2024.05.30 localStorage에 있는 모든 파일 삭제

--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -42,5 +42,5 @@
 
 
 
-<script src="{% static 'posts/js/detail/js' %}"></script>
+<script src="{% static 'posts/js/detail.js' %}"></script>
 {% endblock content %}
