--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -18,9 +18,12 @@
 <div class="menu">
     <a href="#" class="active">내 게시글 목록</a>
     <a href="#">찜한 게시글 목록</a>
-    <a href="#">찜한 노래 목록</a>
+    <a href="#" id="zzim-playlist-link">찜한 노래 목록</a>
     <a href="#">내가 받은 훈수</a>
 </div>
+
+<div id="zzim-playlist-container" class="playlist-container hidden">
+
 <script src="{% static 'accounts/js/profile.js' %}"></script>
 
 {% endblock content %}
