playlist 찜기능 추가, profile page에서 찜한 playlist 확인기능 2024.05.30 1. playlist.views.py playlist 찜기능, 유저의 찜한목록 불러오기, 유저가 찜한 playlist 모두 전송하는 뷰 작성 2. playlist.urls.py views.py 추가된 apiview  api전송 주소 추가 3. playlist.js 버튼의 찜 유무에 따른 시작상태 변경 4. accounts/profile.html zzim_playlist_container 추가 5. accounts/profile.js 찜한 목록 불러오기 기능 추가 찜 취소하고 새로고침시 해당 내용 불러오기 하지 않음

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -22,7 +22,8 @@
     <a href="#">내가 받은 훈수</a>
 </div>
 
-<div id="zzim-playlist-container" class="playlist-container hidden">
+<div id="zzim-playlist-container" class="playlist-container">
+</div>
 
 <script src="{% static 'accounts/js/profile.js' %}"></script>
 
