--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -9,7 +9,7 @@
         <p id="post-updated"></p>
         <p id="post-author"></p>
     </div>
-    <a href="" id="update-link">수정하기 | 편집됨</a>
+    <a href="#" id="update-link">수정하기</a>
     <div class="post-img">
         <img id="post-img">
     </div>
