posts/detail.js 댓글 목록 보여주는 기능 구현 2024.05.31 posts/detail.html 댓글 목록 div 일부 수정

--- a/posts/templates/posts/list.html
+++ b/posts/templates/posts/list.html
@@ -20,7 +20,7 @@
                 <option value="-like">좋아요순</option>
             </select>        
         </div>
-        <a href="">작성하기</a>
+        <a href="/api/posts/create/">작성하기</a>
     </div>
     <div class="post">
         <div class="content" id="postsList"></div>
