coach 연결, profile에 코치 링크추가, profile에서 항목간 이동 로직 2024.05.31

--- a/accounts/static/accounts/css/profile.css
+++ b/accounts/static/accounts/css/profile.css
@@ -102,3 +102,9 @@ body {
     width: 50%;
 }
 
+
+
+/* 추가된 style */
+.playlist-container, .coach-container {
+    display: none; /* 처음에 모두 숨김 */
+}
