--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
                 <a href="/api/accounts/main/">Home</a>
             </div>
             <div class="service">
-                <a href="community">Coach service</a>
+                <a href="/api/coach/">Coach service</a>
                 <a href="/api/playlist/">Playlist</a>
                 <a href="/api/posts/list/">Community</a>
             </div>
