--- a/coach/templates/coach/coach.html
+++ b/coach/templates/coach/coach.html
@@ -12,20 +12,24 @@
     <h1>Upload</h1>
     
     <div class="input-container">
+        <form id="inputForm" onsubmit="submitForm(event)">
         <h2>원곡링크</h2>
         <div class="input-group">
-            <input type="text" class="input-song" placeholder="원곡 링크를 넣어주세요">
+            <input type="url" id="youtube_url" class="input-song" placeholder="원곡 링크를 넣어주세요">
         </div>
         
         <h2>녹음파일</h2>
         <div class="input-group">
-            <input type="text" class="input-song" placeholder="녹음 파일을 넣어주세요">
+            <input type="file" id="input_file" class="input-song" placeholder="녹음 파일을 넣어주세요">
             <div class="button-container">
-                <button class='button'>작업하기</button>
+                <button type="submit" class='button'>작업하기</button>
         </div>
         </div>
+    </form>
     </div>
 </div>
 
+<script src="{% static 'coach/js/coach.js' %}"></script>
 
 {% endblock content %}
+
