--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -9,10 +9,14 @@
     <div class="profile-image">
         <img id="profile-picture" alt="Profile Picture">
     </div>
-    <p><span id="nickname"></span></p>
-    <p class="hidden"><strong>Username:</strong> <span id="username"></span></p>
-    <p class="hidden"><strong>Email:</strong> <span id="email"></span></p>
-    <a href="/api/accounts/profile/{{user_id}}/edit/" id="edit-profile-button">프로필 수정</a>
+    <div class="profile-text">
+        <p id='text'>닉네임  <span id="nickname"></span></p>
+        <p id='text' class="hidden">아이디  <span id="username"></span></p>
+        <p id='text' class="hidden">이메일  <span id="email"></span></p>
+        <div class="profile-a">
+            <a href="/api/accounts/profile/{{user_id}}/edit/" id="edit-profile-button">프로필 수정</a>
+        </div>
+    </div>
 </div>
 
 <div class="menu">
