다른사람 프로필에 접근 가능하게 설정, 수정하기 버튼 본인만 보이게 하기 2024.06.01 accounts/views.py에서 본인 외의 다른 유저도 접근 가능하게 로직 수정 profile.js에서 url 주소 기반 프로필 id 추출로 변경
profile.html에서 수정 버튼 주소 설정 로직 js로 이동
profile.js에서 수정버튼 관련해서 본인이 아닌 유저는 수정버튼 볼 수 없게 수정

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -14,7 +14,7 @@
         <p id='text' class="hidden">아이디  <span id="username"></span></p>
         <p id='text' class="hidden">이메일  <span id="email"></span></p>
         <div class="profile-a">
-            <a href="/api/accounts/profile/{{user_id}}/edit/" id="edit-profile-button">프로필 수정</a>
+            <a href="#" id="edit-profile-button">프로필 수정</a>
         </div>
     </div>
 </div>
