--- a/accounts/static/accounts/css/profile.css
+++ b/accounts/static/accounts/css/profile.css
@@ -14,9 +14,6 @@
     font-display: swap;
 }
 
-p{
-    margin: 0 0 10px 0;
-=======
 body {
     background: linear-gradient(to right,#4861da, #8f64c6, #d859aa);
     background-size: cover;
@@ -76,6 +73,7 @@ body {
 .profile-image img {
     width: 170px;
     height: 170px;
+}
 
 .profile-image {
     margin-bottom: 10px;
