글 수정버튼 작성자 여부에 따라 안보이게 설정, 댓글 작성자 이미지 나오게 추가 2024.06.01 detail.css comment display 변경 detail.html comment id, class 변경 detail.js 댓글부분 user_image 나오게 추가 posts/serializers.py user_image 가져오는 부분 추가

--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -10,7 +10,8 @@
         <p id="post-author"></p>
     </div>
 
-    <a href="#" onclick="update();" id="update-link">수정하기</a>
+    <a href="#" id="update" class="update-link">수정하기</a>
+    
     <div class="post-img">
         <img id="post-img">
     </div>
