posts/create, accounts/signup, coach/coach 이미지 파일, mp4 파일 선택했을 때, 파일 이름 보여주도록 변경 2024.06.03 html에서 form 내에 선택한 파일 이름이 보이도록 변경

--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -15,8 +15,8 @@
     <div class="post-img">
         <img id="post-img">
     </div>
-    <p id="post-content">
-    </p>
+    <p id="post-content"></p>
+    <p id="post-link"></p>
     <div class="count">
         <p id='like-count'></p>        
             <button id="unlike">
